<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/prueba2"
    >

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_weight="1">

<LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:layout_weight="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="40sp"
            android:textColor="#f2303828"
            android:id="@+id/titulo"
            android:textStyle="bold|normal|italic"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp" />

        <ImageView

            android:id="@+id/begin"
            android:layout_width="wrap_content"

            android:layout_height="wrap_content"

            android:src="@mipmap/ic_launcher"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp" />

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_weight="1">
        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/play_button"
            android:id="@+id/button"
            android:background="#ff09ffb5"
            android:onClick="Play"
            android:layout_gravity="center_horizontal" />


        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/ranking_button"
            android:id="@+id/button2"
            android:background="#ffb8a8ff"
            android:onClick="Ranking"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/go_out"
            android:id="@+id/button3"
            android:background="#ffff7c70"
            android:onClick="Go_Out"

            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp" />

    </LinearLayout>
    </LinearLayout>


</LinearLayout>

